[gd_scene load_steps=2 format=3 uid="uid://c486cbqx5w7xi"]

[ext_resource type="Script" uid="uid://b2788yhaaw4kp" path="res://src/LevelSelector/level_selector.gd" id="1_agfw1"]

[node name="LevelSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_agfw1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "~ select a level ~"
horizontal_alignment = 1

[node name="LevelList" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[connection signal="pressed" from="PanelContainer/HBoxContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
